# plugin-sdk-cmake

./: CMakeLists.txt  README.md  TEMPLATE CMAKE.txt
shared/: Other.h
